# gitcity_2.0

./: .gitignore  CMakeLists.txt  README.md  run_gitcity.bat  walkthrough.md
shaders/: block.frag  block.vert  skybox.frag  skybox.vert  text.frag  text.vert
src/: main.cpp
src/github/: GitHubAPI.cpp  GitHubAPI.h  RepoData.h
src/player/: Camera.h  Player.h
src/render/: Shader.cpp  Shader.h  TextRenderer.cpp  TextRenderer.h
src/render/gladgen/include/glad/: gl.h
src/ui/: BuildingUI.cpp  BuildingUI.h
src/world/: Building.h  Chunk.cpp  Chunk.h  WorldGenerator.cpp  WorldGenerator.h
